@@ -1,8 +1,8 @@
-.\"	$NetBSD: bozohttpd.8,v 1.46.4.1 2015/01/12 10:02:29 martin Exp $
+.\"	$NetBSD: bozohttpd.8,v 1.46.4.2 2015/04/19 04:44:03 msaitoh Exp $
 .\"
 .\"	$eterna: bozohttpd.8,v 1.101 2011/11/18 01:25:11 mrg Exp $
 .\"
-.\" Copyright (c) 1997-2014 Matthew R. Green
+.\" Copyright (c) 1997-2015 Matthew R. Green
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -26,7 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd December 25, 2014
+.Dd March 20, 2015
 .Dt HTTPD 8
 .Os
 .Sh NAME
@@ -596,6 +596,11 @@ provided fixes for HTTP basic authorisation support
 .An Thomas Klausner
 .Aq Mt wiz@NetBSD.org
 provided many fixes and enhancements for the man page
+.It
+.An Mateusz Kocielski
+.Aq Mt shm@NetBSD.org
+fixed memory leaks, information disclosure issues and added support
+for using CGI handlers with directory indexing.
 .It
 .An Arnaud Lacombe
 .Aq Mt alc@NetBSD.org
